--- a/ios/Storyboards/Storyboards/Storyboard.storyboard
+++ b/ios/Storyboards/Storyboards/Storyboard.storyboard
@@ -1,24 +1,78 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="1.0" toolsVersion="1938" systemVersion="11D50b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="XH1-EI-4d7">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="1.0" toolsVersion="1938" systemVersion="11D50b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="DaX-m8-oZL">
     <dependencies>
         <development defaultVersion="4200" identifier="xcode"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="933"/>
     </dependencies>
     <scenes>
-        <scene sceneID="g4n-4b-gld">
+        <scene sceneID="lyX-Bg-lFD">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="DmB-k9-pfb" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <viewController id="XH1-EI-4d7" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="3FZ-9v-gkJ">
-                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="JrQ-Wb-nPR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="Esz-Cw-DUr" customClass="RootViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="BKH-G3-fsr">
+                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Oqm-Qs-GbV">
+                                <rect key="frame" x="124" y="20" width="72" height="37"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Sub">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="MKe-qe-jyK" kind="push" id="fkd-1i-4uf"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Root View Controller" id="2TV-19-e0c"/>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="68" y="29"/>
+            <point key="canvasLocation" x="-150" y="42"/>
+        </scene>
+        <scene sceneID="Nbi-FC-cwt">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DfO-eS-xVr" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="MKe-qe-jyK" customClass="SubViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="FuI-5L-VfP">
+                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="85g-Og-oOL"/>
+                </viewController>
+            </objects>
+            <point key="canvasLocation" x="286" y="42"/>
+        </scene>
+        <scene sceneID="Fw1-SB-SfE">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tRA-aE-dOn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <navigationController definesPresentationContext="YES" id="DaX-m8-oZL" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="wXN-9N-AY9">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="Esz-Cw-DUr" kind="relationship" relationship="rootViewController" id="fRf-Kg-KML"/>
+                    </connections>
+                </navigationController>
+            </objects>
+            <point key="canvasLocation" x="-684" y="42"/>
         </scene>
     </scenes>
+    <classes>
+        <class className="RootViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/RootViewController.h"/>
+        </class>
+        <class className="SubViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SubViewController.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
