--- a/ios/Storyboards/Storyboards/Storyboard.storyboard
+++ b/ios/Storyboards/Storyboards/Storyboard.storyboard
@@ -28,13 +28,20 @@
                                     <segue destination="MKe-qe-jyK" kind="push" id="fkd-1i-4uf"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="RootViewController" lineBreakMode="tailTruncation" minimumFontSize="10" id="xGF-fx-AnF">
+                                <rect key="frame" x="86" y="197" width="148" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" title="Root View Controller" id="2TV-19-e0c"/>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="-150" y="42"/>
+            <point key="canvasLocation" x="-180" y="42"/>
         </scene>
         <scene sceneID="Nbi-FC-cwt">
             <objects>
@@ -43,6 +50,15 @@
                     <view key="view" contentMode="scaleToFill" id="FuI-5L-VfP">
                         <rect key="frame" x="0.0" y="64" width="320" height="416"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="SubViewController" lineBreakMode="tailTruncation" minimumFontSize="10" id="wVB-JV-bWK">
+                                <rect key="frame" x="89" y="197" width="142" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" id="85g-Og-oOL"/>
