--- a/ios/SelectItem/SelectItem/en.lproj/MainStoryboard.storyboard
+++ b/ios/SelectItem/SelectItem/en.lproj/MainStoryboard.storyboard
@@ -24,9 +24,19 @@
                                 </subviews>
                                 <color key="backgroundColor" red="0.80000001192092896" green="0.80000001192092896" blue="0.80000001192092896" alpha="1" colorSpace="calibratedRGB"/>
                             </view>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="ABCD" lineBreakMode="tailTruncation" minimumFontSize="10" id="HFw-f0-7BO">
+                                <rect key="frame" x="20" y="96" width="48" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <connections>
+                        <outlet property="itemLabel" destination="HFw-f0-7BO" id="kzj-AX-k4R"/>
+                    </connections>
                 </viewController>
             </objects>
         </scene>
@@ -34,6 +44,10 @@
     <classes>
         <class className="ViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="selectLabel:"/>
+                <relationship kind="outlet" name="itemLabel" candidateClass="UILabel"/>
+            </relationships>
         </class>
     </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
