--- a/ios/SelectItem/SelectItem/en.lproj/MainStoryboard.storyboard
+++ b/ios/SelectItem/SelectItem/en.lproj/MainStoryboard.storyboard
@@ -17,14 +17,14 @@
                                 <rect key="frame" x="20" y="20" width="68" height="68"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" id="lF6-H4-cDl">
+                                    <imageView contentMode="scaleToFill" id="lF6-H4-cDl" customClass="MyImageView">
                                         <rect key="frame" x="2" y="2" width="64" height="64"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     </imageView>
                                 </subviews>
                                 <color key="backgroundColor" red="0.80000001192092896" green="0.80000001192092896" blue="0.80000001192092896" alpha="1" colorSpace="calibratedRGB"/>
                             </view>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="ABCD" lineBreakMode="tailTruncation" minimumFontSize="10" id="HFw-f0-7BO">
+                            <label opaque="NO" clipsSubviews="YES" contentMode="left" text="ABCD" lineBreakMode="tailTruncation" minimumFontSize="10" id="HFw-f0-7BO">
                                 <rect key="frame" x="20" y="96" width="48" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -35,6 +35,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <connections>
+                        <outlet property="itemImageView" destination="lF6-H4-cDl" id="Uog-9z-vY6"/>
                         <outlet property="itemLabel" destination="HFw-f0-7BO" id="kzj-AX-k4R"/>
                     </connections>
                 </viewController>
@@ -42,11 +43,19 @@
         </scene>
     </scenes>
     <classes>
+        <class className="MyImageView" superclassName="UIImageView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/MyImageView.h"/>
+        </class>
+        <class className="MyLabel" superclassName="UILabel">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/MyLabel.h"/>
+        </class>
         <class className="ViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
             <relationships>
+                <relationship kind="action" name="selectImage:"/>
                 <relationship kind="action" name="selectLabel:"/>
-                <relationship kind="outlet" name="itemLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="itemImageView" candidateClass="MyImageView"/>
+                <relationship kind="outlet" name="itemLabel" candidateClass="MyLabel"/>
             </relationships>
         </class>
     </classes>
