--- a/ios/ImageMasking/ImageMasking/en.lproj/MainStoryboard.storyboard
+++ b/ios/ImageMasking/ImageMasking/en.lproj/MainStoryboard.storyboard
@@ -1,36 +1,77 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="1.0" toolsVersion="1938" systemVersion="11D50b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="1.0" toolsVersion="1938" systemVersion="11D50b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="w5N-Ar-UI9">
     <dependencies>
         <development defaultVersion="4200" identifier="xcode"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="933"/>
     </dependencies>
     <scenes>
-        <scene sceneID="5">
+        <scene sceneID="cas-8F-b3r">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
-                <viewController id="2" customClass="ViewController" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="3">
-                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UOk-ki-wdz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <navigationController definesPresentationContext="YES" id="w5N-Ar-UI9" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="CnG-7H-dzi">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="2Zf-IR-eAT" kind="relationship" relationship="rootViewController" id="99S-DJ-Mz8"/>
+                    </connections>
+                </navigationController>
+            </objects>
+            <point key="canvasLocation" x="-441" y="-150"/>
+        </scene>
+        <scene sceneID="4CW-bG-kWn">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dED-ib-kgZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tableViewController id="2Zf-IR-eAT" customClass="RootViewController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="GHe-iu-9jb">
+                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="Bfb-SE-s6k">
+                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="300" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="2Zf-IR-eAT" id="4f2-kr-yGI"/>
+                            <outlet property="delegate" destination="2Zf-IR-eAT" id="iam-RR-TsV"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="kZc-J0-ykv"/>
+                    <connections>
+                        <segue destination="ULK-7Y-US1" kind="push" identifier="ImageMasking" id="K8Q-cO-wWH"/>
+                    </connections>
+                </tableViewController>
+            </objects>
+            <point key="canvasLocation" x="-9" y="-149"/>
+        </scene>
+        <scene sceneID="obz-pk-KSS">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="oJK-zx-2Ln" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="ULK-7Y-US1" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="27E-zZ-Ck2" customClass="ImageMaskingView">
+                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <subviews>
-                            <view contentMode="scaleToFill" id="FjU-du-Ap7" customClass="MyView">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="460"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                            </view>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <navigationItem key="navigationItem" id="qa6-xC-Nng"/>
                 </viewController>
             </objects>
+            <point key="canvasLocation" x="421" y="-147"/>
         </scene>
     </scenes>
     <classes>
-        <class className="MyView" superclassName="UIView">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/MyView.h"/>
+        <class className="ImageMaskingView" superclassName="UIView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ImageMaskingView.h"/>
         </class>
-        <class className="ViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
+        <class className="RootViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/RootViewController.h"/>
         </class>
     </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
