--- a/ios/CoreAnimation/CoreAnimation/en.lproj/MainStoryboard.storyboard
+++ b/ios/CoreAnimation/CoreAnimation/en.lproj/MainStoryboard.storyboard
@@ -60,6 +60,27 @@
                                             <segue destination="Arw-lS-LQf" kind="push" identifier="flip view" id="JyF-ZN-jRg"/>
                                         </connections>
                                     </tableViewCell>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" textLabel="1bt-bS-2Nc" style="IBUITableViewCellStyleDefault" id="PNv-ac-hw4">
+                                        <rect key="frame" x="0.0" y="88" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="300" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="animating transition" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" id="1bt-bS-2Nc">
+                                                    <rect key="frame" x="10" y="0.0" width="280" height="43"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="highlightedColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                        <connections>
+                                            <segue destination="ddI-Oz-Vrw" kind="push" identifier="animating transition" id="nb2-mb-Hbd"/>
+                                        </connections>
+                                    </tableViewCell>
                                 </cells>
                             </tableViewSection>
                         </sections>
@@ -68,6 +89,33 @@
                 </tableViewController>
             </objects>
             <point key="canvasLocation" x="82" y="42"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="GgS-TC-fmZ">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bOD-Ip-Jti" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="ddI-Oz-Vrw" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Osl-zU-FqA" customClass="AnimatingTransitionView">
+                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="4Dh-sh-GNI">
+                                <rect key="frame" x="20" y="20" width="280" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <connections>
+                            <outlet property="label" destination="4Dh-sh-GNI" id="FIr-Xl-Lef"/>
+                        </connections>
+                    </view>
+                    <navigationItem key="navigationItem" id="9It-xU-GZ4"/>
+                </viewController>
+            </objects>
+            <point key="canvasLocation" x="557" y="639"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="H4n-PU-II3">
@@ -82,7 +130,7 @@
                     <navigationItem key="navigationItem" id="Oog-fG-oOJ"/>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="557" y="507"/>
+            <point key="canvasLocation" x="557" y="42"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="fz8-F1-1Pn">
@@ -106,7 +154,7 @@
                     <navigationItem key="navigationItem" id="jdK-f6-dWj"/>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="557" y="-61"/>
+            <point key="canvasLocation" x="557" y="-551"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="4hv-kG-RvT">
@@ -128,6 +176,12 @@
         <image name="atmark.png" width="64" height="64"/>
     </resources>
     <classes>
+        <class className="AnimatingTransitionView" superclassName="UIView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/AnimatingTransitionView.h"/>
+            <relationships>
+                <relationship kind="outlet" name="label" candidateClass="UILabel"/>
+            </relationships>
+        </class>
         <class className="AnimationBlockView" superclassName="UIView">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/AnimationBlockView.h"/>
             <relationships>
